[gd_scene format=3 uid="uid://dnfe52y7bkm56"]

[ext_resource type="Texture2D" uid="uid://cmyy36anguxnt" path="res://assets/art/cafescene.png" id="1_lh684"]
[ext_resource type="Script" uid="uid://mqm8ikcg43m7" path="res://editor/date_listing.gd" id="1_pqnxd"]
[ext_resource type="Texture2D" uid="uid://cfkpgv1ts8mtq" path="res://assets/art/squarepaul.png" id="2_pqnxd"]

[node name="DateListing" type="HBoxContainer" unique_id=198432252]
offset_right = 521.0
offset_bottom = 192.0
script = ExtResource("1_pqnxd")

[node name="GridContainer" type="GridContainer" parent="." unique_id=1638641685]
layout_mode = 2
columns = 3

[node name="Bg1" type="TextureRect" parent="GridContainer" unique_id=1735235670]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("1_lh684")
expand_mode = 3

[node name="Bg2" type="TextureRect" parent="GridContainer" unique_id=1741728826]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("1_lh684")
expand_mode = 3

[node name="Bg3" type="TextureRect" parent="GridContainer" unique_id=1749027933]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("1_lh684")
expand_mode = 3

[node name="P1" type="TextureRect" parent="GridContainer" unique_id=215748791]
layout_mode = 2
texture = ExtResource("2_pqnxd")
expand_mode = 5

[node name="P2" type="TextureRect" parent="GridContainer" unique_id=591991318]
layout_mode = 2
texture = ExtResource("2_pqnxd")
expand_mode = 5

[node name="P3" type="TextureRect" parent="GridContainer" unique_id=593016313]
layout_mode = 2
texture = ExtResource("2_pqnxd")
expand_mode = 5

[node name="ScrollContainer" type="ScrollContainer" parent="." unique_id=1300535568]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer" unique_id=799109099]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HFlowContainer" parent="ScrollContainer/VBoxContainer" unique_id=309743876]
layout_mode = 2
size_flags_horizontal = 3

[node name="Left" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer" unique_id=418211822]
layout_mode = 2
text = "Left"

[node name="Middle" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer" unique_id=311550451]
layout_mode = 2
text = "Middle"

[node name="Right" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer" unique_id=146030573]
layout_mode = 2
text = "Right"

[node name="EditBackgrounds" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer" unique_id=1975596117]
layout_mode = 2
text = "Edit Backgrounds (Unimpl)"

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer" unique_id=463969026]
custom_minimum_size = Vector2(24.335, 1.785)
layout_mode = 2
size_flags_horizontal = 3
text = "\"Date 1\" with \"Schrodie\" (res://data/schrodie1.json) \"Paul Rudd\" (res://data/paulrudd1.json) and \"Guido\" (res://data/guido1.json)"
autowrap_mode = 3

[connection signal="pressed" from="ScrollContainer/VBoxContainer/HBoxContainer/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/HBoxContainer/Middle" to="." method="_on_middle_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/HBoxContainer/Right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/HBoxContainer/EditBackgrounds" to="." method="_on_edit_backgrounds_pressed"]
